[package]
name = "asteroid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.0"
bevy-inspector-egui = "0.25.0"
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier2d"] }
bevy_rapier2d = { version = "0.27.0", features = ["debug-render-2d"] }
rand = "0.8.4"
yaml-rust2 = "0.9.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3